Language and addition of observed results

--- a/bericht/DataMining.bib
+++ b/bericht/DataMining.bib
@@ -89,4 +89,71 @@
   url          = {https://github.com/chengchingwen/Transformers.jl},
 }
 
+@Article{Lo2019,
+  author        = {Kyle Lo and Lucy Lu Wang and Mark Neumann and Rodney Kinney and Dan S. Weld},
+  title         = {S2ORC: The Semantic Scholar Open Research Corpus},
+  year          = {2019},
+  month         = nov,
+  abstract      = {We introduce S2ORC, a large corpus of 81.1M English-language academic papers spanning many academic disciplines. The corpus consists of rich metadata, paper abstracts, resolved bibliographic references, as well as structured full text for 8.1M open access papers. Full text is annotated with automatically-detected inline mentions of citations, figures, and tables, each linked to their corresponding paper objects. In S2ORC, we aggregate papers from hundreds of academic publishers and digital archives into a unified source, and create the largest publicly-available collection of machine-readable academic text to date. We hope this resource will facilitate research and development of tools and tasks for text mining over academic text.},
+  archiveprefix = {arXiv},
+  eprint        = {1911.02782},
+  file          = {:Lo2019 - S2ORC_ the Semantic Scholar Open Research Corpus.pdf:PDF},
+  keywords      = {cs.CL, cs.DL},
+  primaryclass  = {cs.CL},
+}
+
+@Misc{Kumar2020,
+  author       = {Adarsh Kumar},
+  howpublished = {GitHub},
+  month        = may,
+  title        = {Metrics.jl Version 0.1.0},
+  year         = {2020},
+  url          = {https://github.com/AdarshKumar712/Metrics.jl},
+}
+@article{innes:2018,
+  author    = {Mike Innes},
+  title     = {Flux: Elegant Machine Learning with Julia},
+  journal   = {Journal of Open Source Software},
+  year      = {2018},
+  doi       = {10.21105/joss.00602},
+}@article{Flux.jl-2018,
+  author    = {Michael Innes and
+               Elliot Saba and
+               Keno Fischer and
+               Dhairya Gandhi and
+               Marco Concetto Rudilosso and
+               Neethu Mariya Joy and
+               Tejan Karmali and
+               Avik Pal and
+               Viral Shah},
+  title     = {Fashionable Modelling with Flux},
+  journal   = {CoRR},
+  volume    = {abs/1811.01457},
+  year      = {2018},
+  url       = {https://arxiv.org/abs/1811.01457},
+  archivePrefix = {arXiv},
+  eprint    = {1811.01457},
+  timestamp = {Thu, 22 Nov 2018 17:58:30 +0100},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1811-01457},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@Misc{Besard2021,
+  author       = {Tim Besard and Dahua Lin and Valentin Churavy and Julian P Samaroo and others},
+  howpublished = {GitHub},
+  month        = mar,
+  title        = {AMDGPU.jl Version 0.2.4},
+  year         = {2021},
+  url          = {https://github.com/JuliaGPU/AMDGPU.jl},
+}
+
+@Misc{Devices2021,
+  author       = {{Advanced Micro Devices}},
+  howpublished = {GitHub},
+  month        = jan,
+  title        = {ROCm Version 4.0.1},
+  year         = {2021},
+  url          = {https://github.com/RadeonOpenCompute/ROCm/tree/rocm-4.0.1},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
