--- a/bericht/document.tex
+++ b/bericht/document.tex
@@ -19,7 +19,7 @@
 		%\includegraphics*{pic/logo}\par 
 		\Large Institut für Informatik\par 
 		\vspace{1.5cm}
-		\huge \bfseries Reproducibility of SciBert
+		\huge \bfseries Reproducibility of SciBERT
 		
 		\vspace{2cm}
 		
