--- a/bericht/sections/sci_bert.tex
+++ b/bericht/sections/sci_bert.tex
@@ -1,9 +1,9 @@
 \chapter{SciBert}
-SciBERT uses the original BERT architecture and thus incorporates adaptability and universal applicability. SciBERT is a version of BERT trained on a different corpus. This is intended to make SciBERT better at understanding natural language that originates from the domain it is intended for. More specifically, in this case, the biomedical and computer science domain. In the original paper, the authors presented four different versions of SciBERT, two that use the standard vocabulary of BERT and two that use a specialized vocabulary to better represent the vocabulary of the corpus. It is worth noting that the two different vocabularies overlap by only about $42\%$.This shows how different the two underlying corpora are, and therefore suggests that the SciBERT versions using this adapted vocabulary may perform significantly differently than the standard BERT model simply because of this more adapted vocabulary for the given domain already, and this might also be the case when compared to the SciBERT model using the vocabulary from BERT. 
+SciBERT uses the original BERT architecture and thus incorporates adaptability and broad applicability.\cite{Beltagy2019,Devlin2018} SciBERT is a version of BERT trained on a different corpus. This is intended to make SciBERT better at understanding natural language that originates from the domain it is intended for. More specifically, in this case, the biomedical and computer science domain. In the original paper, the authors presented four different versions of SciBERT, two that use the standard vocabulary of BERT and two that use a specialized vocabulary to better represent the vocabulary of the corpus. It is worth noting that the two different vocabularies overlap by only about $42\%$.This shows how different the two underlying corpora are, and therefore suggests that the SciBERT versions using this adapted vocabulary may perform significantly differently than the standard BERT model simply because of this more adapted vocabulary for the given domain already, and this might also be the case when compared to the SciBERT model using the vocabulary from BERT. \cite{Beltagy2019}
 
 While the architecture used in the SciBERT model is described in great detail, as well as the changes made for specific tasks, there are some missing pieces of information that underlie certain decisions, and some decisions were made based on previous models and are therefore not necessarily transferable to this new model without some restrictions.
 
-The first thing to mention here is that the corpus on which the model is trained is not specified precisely enough or that the actual data used cannot be traced.  Only the source of the data was described, but not the selected data, and this information does not seem to be reproducible at all.
+The first thing to mention here is that the corpus on which the model is trained is not specified precisely enough or that the actual data used cannot be traced.  Only the source of the data was described, but not the selected data \cite{Beltagy2019}, and this information does not seem to be reproducible at all.
 
 Another example would be the architecture for the tasks themselves. This is determined without considering other possibilities that could potentially produce similar or even better results. Likewise, the optimizer, dropout, and loss function are referenced from another paper without considering the possibility that an alternative might be more appropriate. A similar situation can be observed for the batch size and the choice concerning the number of epochs and the learning rates being considered. While several options are mentioned for epochs and learning rates, this is followed by settling for the best epoch and learn rate in each case. Furthermore, the decisions regarding learn rate and epoch are not discussed further and thus the information on the exact influence of the learning rate and the number of epochs is missing.
 Another aspect would be that of tasks and grades. Here, some frequently used tasks were used without further explanation. In addition, the selected scores are based solely on other work and are not further justified or extended by other possible scores. Also, only one score is described here, which is supposed to be an average of several attempts, and it would have been more useful to include information about how much the scores vary.  
